# obsidian-voice-notes-repl

./: README.md  pyproject.toml
note_taker/: main.py
